--- a/package.json
+++ b/package.json
@@ -15,7 +15,12 @@
 		"@storybook/react-webpack5": "^8.0.5",
 		"@storybook/test": "^8.0.5",
 		"@svgr/webpack": "^8.0.1",
-		"@types/react": "^18.2.0",
+		"@types/babel__traverse": "^7.20.7",
+		"@types/eslint": "^9.6.1",
+		"@types/node": "^24.0.14",
+		"@types/pretty-hrtime": "^1.0.3",
+		"@types/qs": "^6.14.0",
+		"@types/react": "^18.3.23",
 		"@types/react-dom": "^18.2.1",
 		"@typescript-eslint/eslint-plugin": "^5.59.11",
 		"@typescript-eslint/parser": "^5.59.11",
